GitVersion1/objects/Custom_Reports__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be checked only for external system reports</description>
        <label>External System Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_link__c</fullName>
        <label>Report link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_System_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be checked only for Salesforce system custom reports</description>
        <label>SFDC System Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <label>Section  Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Custom Reports</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>NAME</columns>
        <columns>Report_Name__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>External_System_Report__c</columns>
        <columns>SFDC_System_Report__c</columns>
        <columns>Report_link__c</columns>
        <columns>Section_Name__c</columns>
        <columns>Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
</CustomObject>